--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,10 +28,10 @@
             %span.icon-bar
           %a.brand(href="#") PracticeTaskManager
           .container.nav-collapse
-            %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+            %ul.nav.pull-right
+              %li= link_to "Signup", new_user_path
+              -#%li= link_to "Link 2", "/path2"
+              -#%li= link_to "Link 3", "/path3"
 
     .container-fluid
 
