--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,10 +30,11 @@
           .container.nav-collapse
             %ul.nav.pull-right
               - if user_signed_in?
-                = current_user.email
+                %li= current_user.email
+                %li= link_to 'Sign out', session_path, method: :delete
               - else
-                %li= link_to "Signup", new_user_path
                 %li= link_to "Sing in", new_session_path
+                %li= link_to "Signup", new_user_path
 
     .container-fluid
 
