--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -1,5 +1,3 @@
-%p#notice= notice
-
 %p
   %b Title:
   = @story.title
@@ -19,3 +17,8 @@
 = link_to 'Edit', edit_story_path(@story)
 \|
 = link_to 'Back', stories_path
+
+= render partial: 'comments/form', locals: {comment: Comment.new, story: @story}
+
+%h2 Comments
+= render partial: 'comments/comment', collection: @story.comments
