--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,6 +44,7 @@
             %ul.nav.nav-list
               %li.nav-header Sidebar
               %li= link_to 'Stories', stories_path
+          = yield :sidebar
         .span9
           = bootstrap_flash
           = yield
