--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,8 +26,10 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") PracticeTaskManager
+          = link_to t('app_title'), root_path, class: 'brand'
           .container.nav-collapse
+            %ul.nav
+              %li= link_to 'Stories', stories_path
             %ul.nav.pull-right
               - if user_signed_in?
                 %li= link_to current_user.email
@@ -39,13 +41,9 @@
     .container-fluid
 
       .row-fluid
-        .span3
-          .well.sidebar-nav
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to 'Stories', stories_path
+        .span2
           = yield :sidebar
-        .span9
+        .span10
           = bootstrap_flash
           = yield
 
