--- a/app/views/stories/edit.html.haml
+++ b/app/views/stories/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing story
+%h1= t('views.edit_story.title')
 
 = render 'form'
 
-= link_to 'Show', @story
+= link_to t('helpers.links.show'), @story
 \|
-= link_to 'Back', stories_path
+= link_to t('helpers.links.back'), stories_path
