--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -1,41 +1,30 @@
-- content_for :sidebar do
-  .sidebar.well
-    %h4 Filter
-    = search_form_for @q do |f|
-      = f.label :author_email_cont, 'Author'
-      = f.text_field :author_email_cont
-      = f.label :author_email_cont, 'Owner'
-      = f.text_field :owner_email_cont
-      = f.label :state_eq, 'State'
-      = f.select :state_eq, Story.state_names, include_blank: true
-      %br
-      = f.submit class: 'btn'
+%h1= t('views.stories.title')
 
-%h1 Listing stories
+.row-fluid
+  .span9
+    %table.table
+      %tr
+        %th= Story.human_attribute_name(:title)
+        %th= Story.human_attribute_name(:description)
+        %th= Story.human_attribute_name(:author)
+        %th= Story.human_attribute_name(:owner)
+        %th= Story.human_attribute_name(:state)
+        %th
+        %th
+        %th
 
-%table.table
-  %tr
-    %th Title
-    %th Description
-    %th Author
-    %th Owner
-    %th State
-    %th
-    %th
-    %th
+      - @stories.each do |story|
+        %tr
+          %td= story.title
+          %td= story.description
+          %td= story.author
+          %td= story.owner
+          %td= story.human_state_name
+          %td= render partial: 'events', locals: {story: story}
+          %td= link_to t('helpers.links.show'), story
+          %td= link_to t('helpers.links.edit'), edit_story_path(story)
+          %td= link_to t('helpers.links.destroy'), story, :method => :delete, :data => { :confirm => t('helpers.links.confirm') }, class: 'btn btn-danger'
+  .span3
+    = render partial: 'filter', locals: {query: @q}
 
-  - @stories.each do |story|
-    %tr
-      %td= story.title
-      %td= story.description
-      %td= story.author
-      %td= story.owner
-      %td= story.human_state_name
-      %td= render partial: 'events', locals: {story: story}
-      %td= link_to 'Show', story
-      %td= link_to 'Edit', edit_story_path(story)
-      %td= link_to 'Destroy', story, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger'
-
-%br
-
-= link_to 'New Story', new_story_path
+= link_to t('helpers.titles.new', model: Story), new_story_path
