--- a/app/views/stories/new.html.haml
+++ b/app/views/stories/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New story
+%h1= t('views.new_story.title')
 
 = render 'form'
 
-= link_to 'Back', stories_path
+= link_to t('helpers.links.new'), stories_path
