--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,6 +30,7 @@
           .container.nav-collapse
             %ul.nav
               %li= link_to 'Stories', stories_path
+              %li= link_to t('helpers.titles.new', model: Story), new_story_path
             %ul.nav.pull-right
               - if user_signed_in?
                 %li= link_to current_user.email
