--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,11 +33,17 @@
               %li= link_to t('helpers.titles.new', model: Story), new_story_path
             %ul.nav.pull-right
               - if user_signed_in?
-                %li= link_to current_user.email
-                %li= link_to 'Sign out', session_path, method: :delete
+                %li.dropdown
+                  = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
+                    = image_tag current_user.avatar, size: '32x32'
+                    = current_user.email
+                  %ul.dropdown-menu{role: 'menu'}
+                    %li= link_to t('main_menu.profile'), user_path(current_user)
+                    %li= link_to t('main_menu.edit_profile'), edit_user_path(current_user)
+                    %li= link_to t('main_menu.sign_out'), session_path, method: :delete
               - else
-                %li= link_to "Sing in", new_session_path
-                %li= link_to "Signup", new_user_path
+                %li= link_to t('main_menu.sign_in'), new_session_path
+                %li= link_to t('main_menu.sign_up'), new_user_path
 
     .container-fluid
 
