--- a/app/views/stories/_filter.html.haml
+++ b/app/views/stories/_filter.html.haml
@@ -1,4 +1,4 @@
-= search_form_for query do |f|
+= search_form_for search do |f|
   = f.label :author_email_cont, 'Author'
   = f.text_field :author_email_cont
   = f.label :author_email_cont, 'Owner'
