--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -4,7 +4,7 @@
   = t('.filter_title')
   %i.icon-chevron-down
 #stories-filter.collapse.out
-  = render partial: 'filter', locals: {query: @q}
+  = render partial: 'filter', locals: {search: @search}
 
 %table.table
   %tr
