--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -4,3 +4,14 @@
   = comment.author
   \:
   = comment.body
+
+  - comment_form_container_id = "comment-form-container-#{comment.id}"
+  = button_tag class: 'btn btn-link', data: {toggle: 'collapse', target: "##{comment_form_container_id}"} do
+    = t('.comment')
+  .comment-form-container{id: comment_form_container_id, class: 'collapse out'}
+    = render partial: 'comments/form', locals: {comment: comment.children.build}
+
+  .comment-children
+    - comment.children.ordered_by_time.each do |child_comment|
+      .child-comment
+        = render child_comment
