--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,5 @@
-= simple_form_for([story, comment]) do |f|
+- resource = local_assigns.has_key?(:story) ? [story, comment] : comment
+= simple_form_for(resource) do |f|
   = f.input :body, label: false, input_html: {rows: 4, class: 'span5'}
+  = f.input :parent_id, as: :hidden
   = f.button :submit
