--- a/app/views/stories/show.html.haml
+++ b/app/views/stories/show.html.haml
@@ -18,7 +18,4 @@
 \|
 = link_to t('helpers.links.back'), stories_path
 
-= render partial: 'comments/form', locals: {comment: Comment.new, story: @story}
-
-%h2= t('.comments_title')
-= render partial: 'comments/comment', collection: @story.comments.ordered_by_time
+= render partial: 'comments/commentation', locals: {story: @story}
