--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,6 +46,7 @@
                 %li= link_to t('main_menu.sign_up'), new_user_path
 
     .container-fluid
+      = render_breadcrumbs
 
       .row-fluid
         .span2
