Refactoring: controllers namespacing

--- a/app/views/web/stories/show.html.haml
+++ b/app/views/web/stories/show.html.haml
@@ -18,4 +18,4 @@
 \|
 = link_to t('helpers.links.back'), stories_path
 
-= render partial: 'comments/commentation', locals: {story: @story}
+= render partial: 'web/comments/commentation', locals: {story: @story}
