--- a/app/views/web/comments/_form.html.haml
+++ b/app/views/web/comments/_form.html.haml
@@ -1,5 +1,4 @@
-- resource = local_assigns.has_key?(:story) ? [story, comment] : comment
-= simple_form_for(resource, html: {data: {remote: true, format: :js}}) do |f|
+= simple_form_for([story, comment], html: {data: {remote: true, format: :js}}) do |f|
   = f.input :body, label: false, input_html: {rows: 4, class: 'span5'}
   = f.input :parent_id, as: :hidden
   = f.button :submit
