--- a/app/views/web/comments/edit.html.haml
+++ b/app/views/web/comments/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render partial: 'form', locals: {comment: @comment, story: @story}
 
-= link_to t('helpers.links.show'), @comment
+= link_to t('helpers.links.show'), [@story, @comment]
 \|
 = link_to t('helpers.links.back'), story_comments_path(@story)
