--- a/app/views/web/comments/show.html.haml
+++ b/app/views/web/comments/show.html.haml
@@ -8,6 +8,6 @@
   %b Story:
   = @comment.story
 
-= link_to 'Edit', edit_comment_path(@comment)
+= link_to 'Edit', edit_story_comment_path(@story, @comment)
 \|
 = link_to 'Back', story_comments_path(@story)
