--- a/app/views/web/stories/show.html.haml
+++ b/app/views/web/stories/show.html.haml
@@ -18,4 +18,8 @@
 \|
 = link_to t('helpers.links.back'), stories_path
 
-= render partial: 'web/comments/commentation', locals: {story: @story}
+.commentation
+  = render partial: 'web/comments/form', locals: {comment: Comment.new, story: @story}
+
+  %h2= t('.comments_title')
+  = render partial: 'web/comments/comments', locals: {comments: @comments}
