--- a/app/views/web/stories/comments/_comment.html.haml
+++ b/app/views/web/stories/comments/_comment.html.haml
@@ -9,7 +9,7 @@
   = button_tag class: 'btn btn-link', data: {toggle: 'collapse', target: "##{comment_form_container_id}"} do
     = t('.comment')
   .comment-form-container{id: comment_form_container_id, class: 'collapse out'}
-    = render partial: 'web/comments/form', locals: {story: comment.story, comment: comment.children.build}
+    = render partial: 'web/stories/comments/form', locals: {story: comment.story, comment: comment.children.build}
 
   .comment-children
-    = render partial: 'web/comments/comments', locals: {comments: child_comments}
+    = render partial: 'web/stories/comments/comments', locals: {comments: child_comments}
