--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,14 @@
 !!! 5
-%html(lang="en")
+%html(lang="en" xmlns:og='http://ogp.me/ns#')
   %head
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %title= content_for?(:title) ? yield(:title) : "PracticeTaskManager"
+    %meta(property='og:url' content='http://pure-mesa-3708.herokuapp.com')
+    %meta(property='og:image' content='http://pure-mesa-3708.herokuapp.com/1.png')
+    %meta(property='og:title' content='title')
+    %meta(property='og:description' content='description')
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
