--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,10 @@
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %title= content_for?(:title) ? yield(:title) : "PracticeTaskManager"
-    %meta(property='og:url' content='http://pure-mesa-3708.herokuapp.com')
-    %meta(property='og:image' content='http://pure-mesa-3708.herokuapp.com/1.png')
+    - f = params[:f] || 'png'
+    - params[:id] ||= 1
+    %meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}")
+    %meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}")
     %meta(property='og:title' content='title')
     %meta(property='og:description' content='description')
     = csrf_meta_tags
