--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,9 @@
     %title= content_for?(:title) ? yield(:title) : "PracticeTaskManager"
     - f = params[:f] || 'png'
     - params[:id] ||= 1
-    %meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}")
-    %meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}")
+    - params[:im] ||= '1.png'
+    %meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}&im=#{params[:im]}")
+    %meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}&im=#{params[:im]}"")
     %meta(property='og:title' content='title')
     %meta(property='og:description' content='description')
     = csrf_meta_tags
