--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
 
 
   %body
-    = image_tag '1.png'
+    %img(src='http://digitaloctober.tv/playlists/511/thumbnails/fb.png')
     .navbar.navbar-fluid-top
       .navbar-inner
         .container-fluid
