--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,10 +8,12 @@
     - f = params[:f] || 'png'
     - params[:id] ||= 1
     - params[:im] ||= '1.png'
-    %meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}&im=#{params[:im]}")
-    %meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}&im=#{params[:im]}")
-    %meta(property='og:title' content='title')
-    %meta(property='og:description' content='description')
+    -#%meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}&im=#{params[:im]}")
+    -#%meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}&im=#{params[:im]}")
+    %meta{property: 'og:url', content: "http://pure-mesa-3708.herokuapp.com/playlists/#{params[:id]}"}
+    %meta{property: 'og:image', content: "http://digitaloctober.tv/playlists/#{params[:id]}/thumbnails/fb.jpg"}
+    %meta(property='og:title' content="playlist #{params[:id]}")
+    %meta(property='og:description' content="playlist description #{params[:id]}")
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -26,7 +28,6 @@
 
 
   %body
-    %img(src='http://digitaloctober.tv/playlists/511/thumbnails/fb.png')
     .navbar.navbar-fluid-top
       .navbar-inner
         .container-fluid
