--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,8 @@
     - params[:im] ||= '1.png'
     -#%meta(property='og:url' content="http://pure-mesa-3708.herokuapp.com#{request.path}/?sleep=#{params[:sleep]}&f=#{f}&i=#{params[:i]}&im=#{params[:im]}")
     -#%meta(property='og:image' content="http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.#{f}?sleep=#{params[:sleep]}&im=#{params[:im]}")
-    %meta{property: 'og:url', content: "http://pure-mesa-3708.herokuapp.com/playlists/#{params[:id]}"}
+    - image_id = params[:image_id] || params[:id]
+    %meta{property: 'og:url', content: "http://pure-mesa-3708.herokuapp.com/playlists/#{params[:id]}?image_id=#{image_id}"}
     %meta{property: 'og:image', content: "http://digitaloctober.tv/playlists/#{params[:id]}/thumbnails/fb.jpg"}
     %meta(property='og:title' content="playlist #{params[:id]}")
     %meta(property='og:description' content="playlist description #{params[:id]}")
