--- a/app/views/web/playlists/show.html.haml
+++ b/app/views/web/playlists/show.html.haml
@@ -1,3 +1,3 @@
 - image_id = params[:image_id] || params[:id]
 = image_tag "http://digitaloctober.tv/playlists/#{image_id}/thumbnails/fb.jpg"
-= image_tag 'http://digitaloctober.tv/assets/modal_blur_bg-f0801a194138208b1ecc3d67629db990.jpg'
+= image_tag "/images/1.jpg?sleep=2"
