--- a/app/views/web/playlists/show.html.haml
+++ b/app/views/web/playlists/show.html.haml
@@ -1,3 +1,3 @@
 - image_id = params[:image_id] || params[:id]
 = image_tag "http://digitaloctober.tv/playlists/#{image_id}/thumbnails/fb.jpg"
-= image_tag "/images/#{params[:id]}.jpg?sleep=0.3"
+= image_tag "/images/#{params[:id]}.jpg?sleep=params[:sleep]"
