--- a/app/views/web/playlists/show.html.haml
+++ b/app/views/web/playlists/show.html.haml
@@ -1,6 +1,6 @@
 - image_id = params[:image_id] || params[:id]
 = image_tag "http://digitaloctober.tv/playlists/#{image_id}/thumbnails/fb.jpg"
 = image_tag "http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.jpg?sleep=#{params[:sleep]}"
-= image_tag "http://screenshots.telemarker.ru/screenshot-tm/do-main-4/2012/09/26/16/04_25_500x281.jpg"
-= image_tag "http://digitaloctober.tv/system/uploads/Sponsor/logo/3/3_original.png?time=1386847942"
-= image_tag "http://digitaloctober.tv/system/uploads/Sponsor%3A%3ABanner/image/8/8_original.jpg?time=1387452954"
+-#= image_tag "http://screenshots.telemarker.ru/screenshot-tm/do-main-4/2012/09/26/16/04_25_500x281.jpg"
+-#= image_tag "http://digitaloctober.tv/system/uploads/Sponsor/logo/3/3_original.png?time=1386847942"
+-#= image_tag "http://digitaloctober.tv/system/uploads/Sponsor%3A%3ABanner/image/8/8_original.jpg?time=1387452954"
