--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html(lang="en" xmlns:og='http://ogp.me/ns#')
+%html(lang="en" xmlns:og='http://ogp.me/ns#' xmlns:fb="https://www.facebook.com/2008/fbml")
   %head
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
@@ -15,6 +15,7 @@
     %meta{property: 'og:image', content: "http://digitaloctober.tv/playlists/#{params[:id]}/thumbnails/fb.jpg"}
     %meta(property='og:title' content="playlist #{params[:id]}")
     %meta(property='og:description' content="playlist description #{params[:id]}")
+    %meta(property='fb:app_id' content='1420881018147656')
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
