--- a/app/views/web/playlists/show.html.haml
+++ b/app/views/web/playlists/show.html.haml
@@ -1,7 +1,7 @@
 - image_id = params[:image_id] || params[:id]
 = image_tag "http://digitaloctober.tv/playlists/#{image_id}/thumbnails/fb.png"
 = image_tag "http://digitaloctober.tv/videos/322/thumbnails/fb.png?time=#{Time.now.to_i}"
-= image_tag "http://digitaloctober.tv/system/uploads/Video/preview/#{image_id}/#{image_id}_big.JPG"
+= image_tag "http://digitaloctober.tv/system/uploads/Video/preview/#{image_id}/#{image_id}_big.JPG?time=#{Time.now.to_i}"
 -#= image_tag "http://pure-mesa-3708.herokuapp.com/images/#{params[:id]}.jpg?sleep=#{params[:sleep]}"
 -#= image_tag "http://screenshots.telemarker.ru/screenshot-tm/do-main-4/2012/09/26/16/04_25_500x281.jpg"
 -#= image_tag "http://digitaloctober.tv/system/uploads/Sponsor/logo/3/3_original.png?time=1386847942"
